--- a/css/main.css
+++ b/css/main.css
@@ -665,6 +665,31 @@ input:-webkit-autofill {
   -ms-flex-direction: column;
   flex-direction: column;
 }
+.error-text {
+  display: none;
+  position: absolute;
+  top: calc(100% + 2px);
+  left: 0;
+  font-size: 0.6875rem;
+  color: red;
+}
+@media (max-width: 48em) {
+  .error-text {
+    font-size: 0.625rem;
+  }
+}
+
+.input.error:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+.input.error .input__control {
+  -webkit-box-shadow: 0 0 0 1px red;
+  box-shadow: 0 0 0 1px red;
+}
+.input.error .error-text {
+  display: block;
+}
+
 .input {
   position: relative;
 }
@@ -732,43 +757,41 @@ input:-webkit-autofill {
   line-height: 145%;
   color: var(--main-color);
   background: var(--background);
-  border: 2px solid transparent;
+  outline: none;
   border-radius: 8px;
-  -webkit-transition: border-color 0.3s ease-in-out;
-  transition: border-color 0.3s ease-in-out;
+  -webkit-transition: -webkit-box-shadow 0.3s ease-in-out;
+  transition: -webkit-box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
 }
 .input__control--padding {
   padding: 1.5rem 9.0625rem 0.625rem 1rem;
 }
 .input__control::-webkit-input-placeholder {
-  font-size: 0.875rem;
   line-height: 143%;
   color: var(--rose-quartz-400);
 }
 .input__control::-moz-placeholder {
-  font-size: 0.875rem;
   line-height: 143%;
   color: var(--rose-quartz-400);
 }
 .input__control:-ms-input-placeholder {
-  font-size: 0.875rem;
   line-height: 143%;
   color: var(--rose-quartz-400);
 }
 .input__control::-ms-input-placeholder {
-  font-size: 0.875rem;
   line-height: 143%;
   color: var(--rose-quartz-400);
 }
 .input__control::placeholder {
-  font-size: 0.875rem;
   line-height: 143%;
   color: var(--rose-quartz-400);
 }
 .input__control:focus {
   font-size: 0.875rem;
   outline: 0;
-  border-color: var(--robin-egg-blue-500);
+  -webkit-box-shadow: 0 0 0 2px var(--robin-egg-blue-500);
+  box-shadow: 0 0 0 2px var(--robin-egg-blue-500);
 }
 .input__control--customer {
   cursor: pointer;
@@ -840,6 +863,10 @@ input:-webkit-autofill {
   font-size: 0.875rem;
   line-height: 143%;
   color: var(--rose-quartz-400);
+}
+.input.show .input__control:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 .input.show .dropdown-customer {
   opacity: 1;
