--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   --bg: #efeff4;
   --white-100: rgba(255, 255, 255, 0.1);
   --white-400: rgba(255, 255, 255, 0.4);
+  --white-800: rgba(255, 255, 255, 0.8);
   --rose-quartz-400: #aba5ac;
   --dark-purple-400: rgba(45, 30, 47, 0.4);
   --dark-purple-500: rgba(45, 30, 47, 0.5);
@@ -30,6 +31,7 @@
   --btn-text: #2d1e2f;
   --dark-purple-50: rgba(255, 255, 255, 0.1);
   --white-400: #2d1e2f;
+  --white-800: #2d1e2f;
   --dark-purple-100: rgba(255, 255, 255, 0.1);
   --box-shadow: rgba(0, 0, 0, 0.8);
 }
@@ -747,6 +749,16 @@ input:-webkit-autofill {
   -ms-transform: translateY(-0.4375rem);
   transform: translateY(-0.4375rem);
 }
+.input--reward:before {
+  content: "$";
+  position: absolute;
+  z-index: 2;
+  top: 1.5625rem;
+  left: 1rem;
+  color: var(--main-color);
+  font-size: 0.875rem;
+  line-height: 143%;
+}
 .input__control {
   padding: 1.5rem 2rem 0.625rem 1rem;
   position: relative;
@@ -754,6 +766,7 @@ input:-webkit-autofill {
   height: 3.5rem;
   min-height: 3.5rem;
   font-size: 0.875rem;
+  font-weight: 500;
   line-height: 145%;
   color: var(--main-color);
   background: var(--background);
@@ -766,6 +779,9 @@ input:-webkit-autofill {
 }
 .input__control--padding {
   padding: 1.5rem 9.0625rem 0.625rem 1rem;
+}
+.input__control--reward {
+  padding-left: 1.5rem;
 }
 .input__control::-webkit-input-placeholder {
   line-height: 143%;
@@ -788,17 +804,19 @@ input:-webkit-autofill {
   color: var(--rose-quartz-400);
 }
 .input__control:focus {
-  font-size: 0.875rem;
   outline: none;
   -webkit-box-shadow: 0 0 0 2px var(--robin-egg-blue-500);
   box-shadow: 0 0 0 2px var(--robin-egg-blue-500);
 }
 .input__control:active {
-  font-size: 0.875rem;
   outline: none;
 }
 .input__control--customer {
   cursor: pointer;
+}
+.input__control--customer:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 .input__control--customer::-webkit-input-placeholder {
   color: var(--main-color);
@@ -1153,16 +1171,20 @@ input:-webkit-autofill {
 .progressbar {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-  grid-template-columns: repeat(3, 1fr);
-  gap: 0.75rem;
+  -ms-grid-columns: (1fr)[5];
+  grid-template-columns: repeat(5, 1fr);
+  gap: 0.25rem;
   width: 100%;
+}
+.progressbar--6 {
+  -ms-grid-columns: (1fr)[6];
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .progressbar li {
-  height: 4px;
+  height: 0.25rem;
   background: var(--dark-purple-50);
-  border-radius: 20px;
+  border-radius: 2px;
 }
 
 .progressbar li.active {
@@ -1271,13 +1293,13 @@ input:-webkit-autofill {
 .stories__item {
   position: relative;
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 6rem;
-  flex: 0 0 6rem;
-  height: 6rem;
+  -ms-flex: 0 0 7.1875rem;
+  flex: 0 0 7.1875rem;
+  height: 7.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border-radius: 9px;
+  border-radius: 8px;
   overflow: hidden;
 }
 .stories__image {
@@ -1287,18 +1309,19 @@ input:-webkit-autofill {
   object-fit: cover;
 }
 .stories__overlay {
-  padding: 0.375rem;
+  padding: 0.5rem 0.625rem;
   position: absolute;
-  bottom: 0.125rem;
-  left: 0.125rem;
-  right: 0.125rem;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  right: 0;
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
-  background: var(--white-400);
-  font-size: 0.625rem;
+  background: var(--white-800);
+  font-size: 0.6875rem;
   font-weight: 600;
-  line-height: 120%;
-  border-radius: 2px 2px 6px 6px;
+  line-height: 109%;
+  border-radius: 2px;
 }
 
 .filters {
@@ -1377,10 +1400,35 @@ input:-webkit-autofill {
   text-align: center;
 }
 .cards__filters {
+  position: sticky;
+  top: 0;
+  z-index: 2;
   margin-bottom: 0.5rem;
 }
-.cards__items {
+.cards__list {
   margin-bottom: 1.25rem;
+  margin-right: -0.3125rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  position: relative;
+  overflow: auto;
+}
+.cards__list::-webkit-scrollbar {
+  width: 0.375rem;
+}
+.cards__list::-webkit-scrollbar-thumb {
+  background: var(--robin-egg-blue);
+  border-radius: 50px;
+}
+.cards__list::-webkit-scrollbar-track-piece {
+  background: #e9e6e6;
+  border-radius: 50px;
+}
+.cards__items {
+  position: absolute;
+  right: 0.3125rem;
+  left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1891,17 +1939,65 @@ input:-webkit-autofill {
   color: var(--rose-quartz-400);
 }
 
-.story__progressbar {
-  margin-bottom: 1rem;
+.story__body {
+  margin-bottom: 1.875rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 1fr 11.25rem;
+  grid-template-rows: auto 1fr 11.25rem;
+  height: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
-.story__title {
-  font-weight: 600;
-  font-size: 1.125rem;
-  line-height: 133%;
+@media (max-width: 21.875em) {
+  .story__body {
+    margin-bottom: 1.25rem;
+  }
+}
+.story__body--3 {
+  -ms-grid-rows: auto 1fr 8.75rem;
+  grid-template-rows: auto 1fr 8.75rem;
+}
+.story__progressbar {
+  margin-bottom: 2.1875rem;
+}
+.story__picture {
+  position: relative;
+  height: 100%;
+}
+.story__image {
+  margin-bottom: 0.625rem;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 .story__text {
-  line-height: 143%;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.2;
+}
+@media (max-width: 21.875em) {
+  .story__text {
+    font-size: 0.875rem;
+  }
+}
+.story__text--3 {
+  font-size: 0.875rem;
+}
+.story__text-title {
+  margin-bottom: 1rem;
 }
 .story__button {
+  margin: 0 auto;
   margin-bottom: 1rem;
+  min-height: 3.125rem;
+  max-width: 17.75rem;
 }
